fix(ImageViewer): resolved image overlapping after zooming in

--- a/style/mobile/components/image-viewer/v2/_index.less
+++ b/style/mobile/components/image-viewer/v2/_index.less
@@ -36,6 +36,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
   }
 
   &__nav {
